--- a/src/app/pages/home/cart/cart.component.html
+++ b/src/app/pages/home/cart/cart.component.html
@@ -76,13 +76,13 @@
         </td>
         <td class="p-4 border-b border-slate-200 py-5">
           <div class="flex items-center">
-            <button class="text-slate-500 hover:text-slate-700 mr-2">
+            <button (click)="reduceCart(cartItem.product.id)" class="text-slate-500 hover:text-slate-700 mr-2">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M20 12H4" />
               </svg>
             </button>
             <p class="text-sm text-slate-500">{{cartItem.quantity}}</p>
-            <button class="text-slate-500 hover:text-slate-700 ml-2">
+            <button (click)="addCart(cartItem.product.id)" class="text-slate-500 hover:text-slate-700 ml-2">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
               </svg>
